# ai_chat_bot_cli

./: .env  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test.py
src/ai_chat_bot/: __init__.py  config.py  main.py
src/ai_chat_bot/clients/: __init__.py  base.py  gemini.py  groq.py
src/ai_chat_bot/models/: __init__.py  messages.py  responses.py
src/ai_chat_bot/ui/: display.py
src/ai_chat_bot/utils/: __init__.py  exceptions.py  retry.py  tokens.py
src/chat_bot_cli.egg-info/: SOURCES.txt
